Thu Apr 21 01:30:02 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* random.c (rb_f_srand): fix rdoc: srand(0)'s 0 is a seed.
	  [ruby-core:35833] fixes #4590

Thu Apr 21 01:01:28 2011  Masaya Tarui  <tarui@ruby-lang.org>

	* win32/win32.c (CreateChild): maximum length of lpCommandLine is
	  32,768 characters, including the Unicode terminating null character.
	
Wed Apr 20 21:32:11 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_strptime.c (date__strptime_internal): do not
	  overwrite local variables.

Wed Apr 20 14:41:28 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_each_line): check string's length when compare
	  separator and string. [ruby-core:35815] fixes #4586

Wed Apr 20 00:02:13 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-parse-partial): use position of open paren.

Tue Apr 19 01:00:21 2011  Tajima Akio <artonx@yahoo.co.jp>

	* test/ruby/test_io.rb (TestIO#test_cross_thread_close_fd):
	  skip cross thread pipe close if windows

Mon Apr 18 12:15:46 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_range.rb (TestRange#test_step_ruby_core_35753):
	  avoid float error. [ruby-core:35804]

Sun Apr 17 00:20:14 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_{core,strftime}.c: use struct tmx instead of vtm.
	* ext/date/date_tmx.h: new.

Sat Apr 16 22:23:52 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_strftime.c (date_strftime_wo_timespec): changed
	  the way of validation of locale modifiers.

Sat Apr 16 21:55:12 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: replacement of implementation of
	  _strptime.  [experimental]
	* ext/date/date_strptime.c: new.
	* ext/date/lib/date/format.rb: removed ruby version of _strptime.

Sat Apr 16 10:18:30 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* vm.c (Init_VM): suppress warning: "OPT_BASIC_OPERATIONS" is not
	  defined.

Fri Apr 15 23:41:18 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
