@@ -1,3 +1,10 @@
+Fri Apr 22 04:16:14 2011  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* ext/psych/parser.c (parse): strings from psych have proper taint
+	  markings.
+
+	* test/psych/test_tainted.rb: test for string taint
+
 Thu Apr 21 01:30:02 2011  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* random.c (rb_f_srand): fix rdoc: srand(0)'s 0 is a seed.
